cmake_minimum_required(VERSION 3.8 FATAL_ERROR)

set(CUDA_BUILD_CUBIN OFF)
set(CUDA_64_BIT_DEVICE_CODE "ON")
project(gstl LANGUAGES CXX CUDA)

# C++ related
set(CMAKE_CXX_STANDARD 14)
set(CMAKE_CXX_STANDARD_REQUIRED ON)
set(CMAKE_CXX_EXTENSIONS OFF)
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS}")

# CUDA related
set(CMAKE_CUDA_FLAGS "${CMAKE_CUDA_FLAGS} /G")
set(CMAKE_CUDA_STANDARD 14)
set(CMAKE_CUDA_STANDARD_REQUIRED ON)
set(CMAKE_CUDA_EXTENSIONS ON)

set(CUDA_SEPARABLE_COMPILATION ON)
set(CUDA_PROPAGATE_HOST_FLAGS OFF)

# General stuff

set(GSTL_INCLUDES "${CMAKE_CURRENT_SOURCE_DIR}/")
set(THIRDPARTY_INCLUDES 
	"${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/ "
	"${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/cuda-api-wrappers/"
	"${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/moderngpu/src/"
	"${CMAKE_CURRENT_SOURCE_DIR}/thirdparty/hayai/src/"
)
set(TEST_FOLDER "${CMAKE_CURRENT_SOURCE_DIR}/tests/")

add_subdirectory(${TEST_FOLDER})

